feat: swag, db, api 기능 구현
- swag 양식에 맞게 주서 추가
- db crud 관련 구현
- api handler 기능 구현
- 테이블 스키마 초기화 및 구조 설계
