# internal/response/error.go
@@ -1,0 +1,18 @@
+package response
+
+import "github.com/gofiber/fiber/v2"
+
+// NewError example
+func NewError(ctx *fiber.Ctx, status int, err error) {
+	er := HTTPError{
+		Code:    status,
+		Message: err.Error(),
+	}
+	ctx.JSON(er)
+}
+
+// HTTPError example
+type HTTPError struct {
+	Code    int    `json:"code" example:"400"`
+	Message string `json:"message" example:"status bad request"`
+}
