# internal/routes/api.go
@@ -9,14 +9,12 @@ import (
 func Api(app *fiber.App) {
 	routeV1 := app.Group("/api/v1")
 
-	routeV1.Post("/signin", handlers.Signin)
-	routeV1.Delete("/signout", handlers.Signout)
+	routeV1.Post("/login", handlers.Login)
+	routeV1.Delete("/logout", handlers.Logout)
 
-	routeV1.Post("/signup", handlers.Singup)
-
+	routeV1.Post("/users", handlers.CreateUser)
 	routeV1.Get("/users", handlers.GetUsers)
-
 	routeV1.Get("/users/:id", handlers.GetUser)
-	routeV1.Put("/users/:id", handlers.PutUser)
+	routeV1.Put("/users/:id", handlers.UpdateUser)
 	routeV1.Delete("/users/:id", handlers.DeleteUser)
 }
